# morse

./: README.md  pyproject.toml
morse/: pyproject.toml
src/morse/: controller.py  gui.py  gui.ui
